--- a/Tyuiu.KiselevEA.Sprint4.Task1.V13.Test/Tyuiu.KiselevEA.Sprint4.Task1.V13.Test.csproj
+++ b/Tyuiu.KiselevEA.Sprint4.Task1.V13.Test/Tyuiu.KiselevEA.Sprint4.Task1.V13.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KiselevEA.Sprint4.Task1.V13.Lib\Tyuiu.KiselevEA.Sprint4.Task1.V13.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
