--- a/Tyuiu.KiselevEA.Sprint4.Task1.V13/Tyuiu.KiselevEA.Sprint4.Task1.V13.csproj
+++ b/Tyuiu.KiselevEA.Sprint4.Task1.V13/Tyuiu.KiselevEA.Sprint4.Task1.V13.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KiselevEA.Sprint4.Task1.V13.Lib\Tyuiu.KiselevEA.Sprint4.Task1.V13.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
